adds new modal and cards for possible

--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -25,6 +25,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" href="style-assets/css/possible.css" />
 
+  <!-- <t4 type='media' id='172853' formatter='image/path'/> background section
+<t4 type='media' id='172852' formatter='image/path'/> Pride photo
+<t4 type='media' id='117285' formatter='image/path'/> Logo
+
+ -->
+
   <!-- google analytics -->
   <!-- GTM fireGtm variable -->
   <script type="text/javascript">
@@ -106,6 +112,96 @@
 
   </section>
 
+  <section class="statements">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <div class="card-possible" type="button" data-toggle="modal" data-target="#possible-card-1">
+          <p>What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <div class="card-possible">
+          <p>2 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <div class="card-possible">
+          <p>3 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <div class="card-possible">
+          <p>4 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <div class="card-possible">
+          <p>5 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <div class="card-possible">
+          <p>6 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <div class="card-possible">
+          <p>7 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <div class="card-possible">
+          <p>8 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <div class="card-possible">
+          <p>9 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <div class="card-possible">
+          <p>10 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Button trigger modal -->
+
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="possible-card-1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h3 style="margin-bottom:30px;">What’s <span class=" possible-word"> possible</span> when you reimagine higher education? </h3>
+        <p style="italics">
+          A thriving urban university that fosters student success through classroom-to-career connections, relevant degrees and excellent faculty.
+        </p>
+        <p>
+          Build and operate satellites at an innovative aerospace company. Make beer at a legendary brewery. Produce an Emmy-winning newscast. Without leaving campus.
+          That’s possible at Metropolitan State University of Denver.</p>
+        <p>
+          Based in the heart of the Mile High City, MSU Denver provides unparalleled access to internships and professional networks that jump-start careers. Just ask this “SportsCenter” anchor.
+          Professors with experience in their industries? We’ve got those, too: the former director of the NCIS, the convention director of Denver’s Comic Con and a biologist who got bitten by the mosquito bug.
+        </p>
+        <p>The possibilities are endless.</p>
+
+      </div>
+      <button class="col-xs-12 col-md-4 btn" data-dismiss="modal">Close</button>
+    </div>
+  </div>
+</div>
+
+
   <section class="section-feels-like">
     <div class="container">
       <h2 style="margin-bottom:30px;">At MSU Denver, that’s what it feels like to reimagine what’s <span class="possible-word">possible</span> in higher
@@ -145,8 +241,8 @@
             arrive here and who are discovering their own
             possible every day.</p>
           <p style="margin-bottom:20px"> <strong>Ready to find your possible?</strong></p>
-          <a href=""><button class="col-xs-12 col-md-5 offset-md-1 btn">Request information</button></a>
-          <a href=""><button class="col-xs-12 col-md-5 btn">Apply to MSU Denver</button></a>
+          <a href="https://connect.msudenver.edu/register/requestinformation" target="_blank"><button class="col-xs-12 col-md-5 offset-md-1 btn">Request information</button></a>
+          <a href="/apply" target="_blank"><button class="col-xs-12 col-md-5 btn">Apply to MSU Denver</button></a>
         </div>
       </div>
     </div>
