--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -112,6 +112,9 @@
 
   </section>
 
+  @@include('possible/card-possible.html')
+
+
   <section class="section-feels-like">
     <div class="container">
       <h2 style="margin-bottom:30px;">At MSU Denver, that’s what it feels like to reimagine what’s <span class="possible-word">possible</span> in higher
