--- a/www-root/viewbook.html
+++ b/www-root/viewbook.html
@@ -154,25 +154,27 @@
    // $('#bs-example-navbar-collapse-1').css('max-height',$(window).height()-79);
 </script>
 
+
 <script>
-// scrollTop function
 $(window).scroll(function(){
-  var width_threshold = 900;
-  var href = document.location.href;
-  var position = $(window).scrollTop();
-  var width     =  $(window).width();
-  $(".header-fluid").removeClass("header-fluid-change");
-  $(".msudenver_logo").removeClass("msudenver_logo_change");
+   var width_threshold = 900
+   var href = document.location.href 
+   var position = $(window).scrollTop()
+   var width = $(window).width()
+   $(".header-fluid").removeClass("header-fluid-change")
+   $(".msudenver_logo").removeClass("msudenver_logo_change")
 
+   if(position > 15 && width > width_threshold) {
+      $(".header-fluid").toggleClass("header-flud-change")
+      $(".msudenver_logo").toggleClass("msudenver_logo_change")
+   }
 
-  if( position > 15 && width > width_threshold) {
-    $(".header-fluid").toggleClass("header-fluid-change");
-    $(".msudenver_logo").toggleClass("msudenver_logo_change");
-  }
-
-});
+   if($(this).scrollTop() >= 100) 
+      $('.return-to-top').fadeIn(200)
+   else 
+      $('.return-to-top').fadeOut(200)
+})
 </script>
-
 
   <!-- <div class="container">
   <div class="col-xs-12">
