updates modal styles with refinements

--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -115,52 +115,52 @@
   <section class="statements">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-6">
+      <div class="col-xs-12 col-md-4">
         <div class="card-possible" type="button" data-toggle="modal" data-target="#possible-card-1">
           <p>What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-6">
+      <div class="col-xs-12 col-md-4">
         <div class="card-possible">
           <p>2 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-6">
+      <div class="col-xs-12 col-md-4">
         <div class="card-possible">
           <p>3 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-6">
+      <div class="col-xs-12 col-md-4">
         <div class="card-possible">
           <p>4 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-6">
+      <div class="col-xs-12 col-md-4">
         <div class="card-possible">
           <p>5 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-6">
+      <div class="col-xs-12 col-md-4">
         <div class="card-possible">
           <p>6 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-6">
+      <div class="col-xs-12 col-md-4">
         <div class="card-possible">
           <p>7 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-6">
+      <div class="col-xs-12 col-md-4">
         <div class="card-possible">
           <p>8 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-6">
+      <div class="col-xs-12 col-md-4">
         <div class="card-possible">
           <p>9 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-6">
+      <div class="col-xs-12 col-md-4 offset-md-4">
         <div class="card-possible">
           <p>10 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
@@ -179,13 +179,11 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-body">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
         <h3 style="margin-bottom:30px;">What’s <span class=" possible-word"> possible</span> when you reimagine higher education? </h3>
-        <p style="italics">
-          A thriving urban university that fosters student success through classroom-to-career connections, relevant degrees and excellent faculty.
-        </p>
+        <h4><i>
+            A thriving urban university that fosters student success through classroom-to-career connections, relevant degrees and excellent faculty.
+          </i></h4>
+        <img class="img-thumbnail float-right" style="max-width:500px;" src="style-assets/media/possible/pride.jpg">
         <p>
           Build and operate satellites at an innovative aerospace company. Make beer at a legendary brewery. Produce an Emmy-winning newscast. Without leaving campus.
           That’s possible at Metropolitan State University of Denver.</p>
@@ -193,14 +191,13 @@
           Based in the heart of the Mile High City, MSU Denver provides unparalleled access to internships and professional networks that jump-start careers. Just ask this “SportsCenter” anchor.
           Professors with experience in their industries? We’ve got those, too: the former director of the NCIS, the convention director of Denver’s Comic Con and a biologist who got bitten by the mosquito bug.
         </p>
-        <p>The possibilities are endless.</p>
+        <h4>The possibilities are endless.</h4>
 
       </div>
       <button class="col-xs-12 col-md-4 btn" data-dismiss="modal">Close</button>
     </div>
   </div>
 </div>
-
 
   <section class="section-feels-like">
     <div class="container">
