adds lg viewport and fixes modal width on mbl and deskt

--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -115,52 +115,52 @@
   <section class="statements">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card-possible" type="button" data-toggle="modal" data-target="#possible-card-1">
           <p>What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card-possible">
           <p>2 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card-possible">
           <p>3 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card-possible">
           <p>4 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card-possible">
           <p>5 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card-possible">
           <p>6 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card-possible">
           <p>7 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card-possible">
           <p>8 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card-possible">
           <p>9 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-4 offset-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-4 offset-md-4">
         <div class="card-possible">
           <p>10 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
