adds alternate side and button for panels

--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -88,6 +88,7 @@
         <div class="col-xs-12 col-sm-12 col-md-12">
           <h1>Reimagine <span class="possible-word fade-in">possible</span></h1>
         </div>
+
         <div class="col-xs-12 col-sm-6 col-md-2 offset-md-8 text-center">
           <img class="img-responsive university-logo fade-in" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
         </div>
@@ -98,19 +99,8 @@
       </div>
     </div>
   </section>
-  <section class="start_your_possible" id="start">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-md-8 offset-md-4">
-          <h2>What would you do if anything were <span class="possible-word-reversed">possible</span>?</h2>
-        </div>
-        <div class="col-xs-12 col-md-8 offset-md-4">
-          <p>Imagine a place where barriers are removed, opportunities are plentiful, labels are nonexistent and an entire community of peers, mentors, educators and industry leaders is ready to support you, encourage you and connect with you.</p>
-        </div>
-      </div>
-    </div>
 
-  </section>
+  @@include('possible/start-your-possible.html')
 
   @@include('possible/card-possible.html')
 
