--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -88,6 +88,7 @@
         <div class="col-xs-12 col-sm-12 col-md-12">
           <h1>Reimagine <span class="possible-word fade-in">possible</span></h1>
         </div>
+
         <div class="col-xs-12 col-sm-6 col-md-2 offset-md-8 text-center">
           <img class="img-responsive university-logo fade-in" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
         </div>
@@ -98,19 +99,20 @@
       </div>
     </div>
   </section>
+
   <section class="start_your_possible" id="start">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-md-8 offset-md-4">
-          <h2>What would you do if anything were <span class="possible-word-reversed">possible</span>?</h2>
-        </div>
-        <div class="col-xs-12 col-md-8 offset-md-4">
-          <p>Imagine a place where barriers are removed, opportunities are plentiful, labels are nonexistent and an entire community of peers, mentors, educators and industry leaders is ready to support you, encourage you and connect with you.</p>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-md-8 offset-md-4">
+        <h2>What would you do if anything were <span class="possible-word">possible</span> ?</h2>
+      </div>
+      <div class="col-xs-12 col-md-8 offset-md-4">
+        <p>Imagine a place where barriers are removed, opportunities are plentiful, labels are nonexistent and an entire community of peers, mentors, educators and industry leaders is ready to support you, encourage you and connect with you.</p>
       </div>
     </div>
+  </div>
 
-  </section>
+</section>
 
   <section class="statements">
   <div class="container">
@@ -121,13 +123,14 @@
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>2 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
+        <div class="card-possible" type="button" data-toggle="modal" data-target="#possible-card-2">
+          <p>MSU Denver is where learners connect with leaders.</p>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card-possible">
-          <p>3 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
+          <p>A thriving urban university that fosters student success through classroom-to-career connections, relevant degrees and excellent faculty.</p>
+          <button class="btn" type="button" data-toggle="modal" data-target="#possible-card-2">Learn More </button>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4">
@@ -174,7 +177,7 @@
 
 
 
-<!-- Modal -->
+<!-- Modal 1-->
 <div class="modal fade" id="possible-card-1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
@@ -192,6 +195,34 @@
           Professors with experience in their industries? We’ve got those, too: the former director of the NCIS, the convention director of Denver’s Comic Con and a biologist who got bitten by the mosquito bug.
         </p>
         <h4>The possibilities are endless.</h4>
+
+      </div>
+      <button class="col-xs-12 col-md-4 btn" data-dismiss="modal">Close</button>
+    </div>
+  </div>
+</div>
+
+<!-- Modal 2-->
+<div class="modal fade" id="possible-card-2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <h3 style="margin-bottom:30px;">MSU Denver is where learners connect with leaders.</h3>
+        <h4><i>
+            99% of our classes are taught by faculty, not teaching assistants. They are industry icons, national experts and have the highest degrees in their disciplines.
+          </i></h4>
+        <img class="img-thumbnail float-right" style="max-width:500px;" src="style-assets/media/possible/MockTrial.jpg">
+        <p>
+          Learn to fight crime from the former director of the NCIS. Analyze graphic novels with the convention director of Denver’s Comic Con. Get bitten by the insect bug with a renowned mosquito biologist.</p>
+        <p>
+          That’s possible at Metropolitan State University of Denver.</p>
+        <p> Our professors are experts in their fields, but even better at passing on their expertise to students. </p>
+        <p>
+          How? Hands-on learning built into every academic program. Whether it’s tracking storms outside the city, painting murals for local nonprofits or 3-D printing parts for Colorado space companies. </p>
+        <p>
+          And learning from industry icons isn’t limited to the classroom. In the last year, we’ve had former presidents, media personalities and literary luminaries on campus to share their knowledge.
+        </p>
+
 
       </div>
       <button class="col-xs-12 col-md-4 btn" data-dismiss="modal">Close</button>
