adds new card reversed as an example

--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -129,13 +129,19 @@
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card-possible">
-          <p>A thriving urban university that fosters student success through classroom-to-career connections, relevant degrees and excellent faculty.</p>
-          <button class="btn" type="button" data-toggle="modal" data-target="#possible-card-2">Learn More </button>
+          <p>4 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>4 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
+        <div class="card-possible-reversed">
+          <p>A thriving urban university that fosters student success through classroom-to-career connections, relevant degrees and excellent faculty.</p>
+          <button class="btn" type="button" data-toggle="modal" data-target="#possible-card-1">Learn More </button>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="card-possible-reversed">
+          <p>99% of our classes are taught by faculty, not teaching assistants. They are industry icons, national experts and have the highest degrees in their disciplines.</p>
+          <button class="btn" type="button" data-toggle="modal" data-target="#possible-card-2">Learn More </button>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4">
@@ -156,6 +162,16 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card-possible">
           <p>8 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="card-possible">
+          <p>9 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="card-possible">
+          <p>9 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4">
