adds includeds for each story and navigation buttons.

--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -114,184 +114,208 @@
 
 </section>
 
-  <section class="statements">
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-12">
+      <a href="#reimagine-higher-education">
+        <btn class="btn">Reimagine higher education</btn>
+      </a>
+      <a href="#learners-connect-with-leaders">
+        <btn class="btn">Learners connect with leaders</btn>
+      </a>
+      <a href="#master-your-future">
+        <btn class="btn">Master your future</btn>
+      </a>
+      <a href="#on-the-front-lines-of-cybersecurity">
+        <btn class="btn">On the front lines of cybersecurity</btn>
+      </a>
+      <a href="#brewing-innovation-in-hospitality">
+        <btn class="btn">Brewing innovation in hospitality</btn>
+      </a>
+      <a href="#improving-health-in-colorado">
+        <btn class="btn">Improving health in Colorado</btn>
+      </a>
+      <a href="#teaching-tomorrows-teachers">
+        <btn class="btn">Teaching tomorrow’s teachers</btn>
+      </a>
+      <a href="#operating-satelites-from-the-classroom">
+        <btn class="btn">Operating satellites from the classroom</btn>
+      </a>
+      <a href="#multiply-your-roi">
+        <btn class="btn">Multiply your ROI</btn>
+      </a>
+      <a href="#saving-endangered-languages">
+        <btn class="btn">Saving endangered languages</btn>
+      </a>
+    </div>
+  </div>
+</div>
+
+  <section class="white-background-right-photo" id="reimagine-higher-education">
+  <div class="container">
+    <h2 style="margin-bottom:30px;">What’s <span class="possible-word">possible</span> when you reimagine higher education?</h2>
+    <h4><i>
+        A thriving urban university that fosters student success through classroom-to-career connections, relevant degrees and excellent faculty.
+      </i></h4>
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <p>
+          Build and operate satellites at an innovative aerospace company. Make beer at a legendary brewery. Produce an Emmy-winning newscast. All without leaving campus. Plus, our downtown location provides unparalleled access to internships and
+          networks that jump-start careers. Just ask this “SportsCenter” anchor. The possibilities are endless. </p>
+        <p style="margin-bottom:20px"> <strong>The possibilities are endless.</strong></p>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <img class="img-thumbnail" src="style-assets/media/possible/pride.jpg">
+      </div>
+    </div>
+  </div>
+</section>
+  <section class="" id="learners-connect-with-leaders">
+  <div class="container" style="border: 2px solid #D11242">
+    <h2 style="margin-bottom:30px;">MSU Denver is where learners connect with leaders.</h2>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <h4><i>
+            99% of our classes are taught by faculty, not teaching assistants. They are industry icons, national experts and have the highest degrees in their disciplines.
+          </i></h4>
+        <p>Learn to fight crime from the former director of the NCIS. Analyze graphic novels with the convention director of Denver’s Comic Con. Get bitten by the insect bug with a renowned mosquito biologist. Our professors are experts in their
+          fields, but even better at passing on their expertise to students.</p>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <img class="img-thumbnail" src="style-assets/media/possible/MockTrial.jpg">
+      </div>
+    </div>
+  </div>
+</section>
+  <section id="on-the-front-lines-of-cybersecurity">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible" type="button" data-toggle="modal" data-target="#possible-card-1">
-          <p>What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
+      <div class="col-xs-12">
+        <h2>master-your-future</h2>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible" type="button" data-toggle="modal" data-target="#possible-card-2">
-          <p>MSU Denver is where learners connect with leaders.</p>
-        </div>
+    </div>
+  </div>
+</section>
+  <section id="on-the-front-lines-of-cybersecurity">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <h2>on-the-front-lines-of-cybersecurity</h2>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>4 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
+    </div>
+  </div>
+</section>
+  <section id="brewing-innovation-in-hospitality">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <h2>brewing-innovation-in-hospitality</h2>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible-reversed">
-          <p>A thriving urban university that fosters student success through classroom-to-career connections, relevant degrees and excellent faculty.</p>
-          <button class="btn" type="button" data-toggle="modal" data-target="#possible-card-1">Learn More </button>
-        </div>
+    </div>
+  </div>
+</section>
+  <section id="improving-health-in-colorado">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <h2>improving-health-in-colorado</h2>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible-reversed">
-          <p>99% of our classes are taught by faculty, not teaching assistants. They are industry icons, national experts and have the highest degrees in their disciplines.</p>
-          <button class="btn" type="button" data-toggle="modal" data-target="#possible-card-2">Learn More </button>
-        </div>
+    </div>
+  </div>
+</section>
+  <section id="teaching-tomorrows-teachers">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <h2>teaching-tomorrows-teachers</h2>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>5 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
+    </div>
+  </div>
+</section>
+  <section id="operating-satelites-from-the-classroom">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <h2>operating-satelites-from-the-classroom</h2>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>6 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
+    </div>
+  </div>
+</section>
+  <section id="multiply-your-roi">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <h2>Multiply your ROI.</h2>
+        <h3>Our internationally accredited business college offers the best value in Colorado, a startup spirit and the only sales center in the state.
+        </h3>
+
+        <h3>That’s possible here.</h3>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>7 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>8 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>9 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>9 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>9 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4 offset-md-4">
-        <div class="card-possible">
-          <p>10 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
+    </div>
+  </div>
+</section>
+  <section id="saving-endangered-languages">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <h2>saving-endangered-languages</h2>
       </div>
     </div>
   </div>
 </section>
 
-<!-- Button trigger modal -->
-
-
-
-
-<!-- Modal 1-->
-<div class="modal fade" id="possible-card-1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-body">
-        <h3 style="margin-bottom:30px;">What’s <span class=" possible-word"> possible</span> when you reimagine higher education? </h3>
+  <section class="white-background-right-photo">
+  <div class="container">
+    <h2 style="margin-bottom:30px;">white-background-right-photo<span class="possible-word">possible</span></h2>
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <p>white-background-right-photo white-background-right-photo white-background-right-photo white-background-right-photo white-background-right-photo white-background-right-photo white-background-right-photo white-background-right-photo
+          white-background-right-photo white-background-right-photo white-background-right-photo </p>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <img class="img-thumbnail" src="style-assets/media/possible/pride.jpg">
+      </div>
+    </div>
+  </div>
+</section>
+  <section class="background-right-copy">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12 col-md-7 offset-md-5 well">
+        <h2>What’s <span class="possible-word">possible</span> when you reimagine higher education?</h2>
         <h4><i>
             A thriving urban university that fosters student success through classroom-to-career connections, relevant degrees and excellent faculty.
           </i></h4>
-        <img class="img-thumbnail float-right" style="max-width:500px;" src="style-assets/media/possible/BreweryStudents.jpg">
         <p>
-          Build and operate satellites at an innovative aerospace company. Make beer at a legendary brewery. Produce an Emmy-winning newscast. Without leaving campus.
-          That’s possible at Metropolitan State University of Denver.</p>
-        <p>
-          Based in the heart of the Mile High City, MSU Denver provides unparalleled access to internships and professional networks that jump-start careers. Just ask this “SportsCenter” anchor.
-          Professors with experience in their industries? We’ve got those, too: the former director of the NCIS, the convention director of Denver’s Comic Con and a biologist who got bitten by the mosquito bug.
-        </p>
-        <h4>The possibilities are endless.</h4>
+          Build and operate satellites at an innovative aerospace company. Make beer at a legendary brewery. Produce an Emmy-winning newscast. All without leaving campus. Plus, our downtown location provides unparalleled access to internships and
+          networks that jump-start careers. Just ask this “SportsCenter” anchor. The possibilities are endless. </p>
+        <p style="margin-bottom:20px"> <strong>The possibilities are endless.</strong></p>
 
       </div>
-      <button class="col-xs-12 col-md-4 btn" data-dismiss="modal">Close</button>
     </div>
   </div>
-</div>
-
-<!-- Modal 2-->
-<div class="modal fade" id="possible-card-2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-body">
-        <h3 style="margin-bottom:30px;">MSU Denver is where learners connect with leaders.</h3>
-        <h4><i>
-            99% of our classes are taught by faculty, not teaching assistants. They are industry icons, national experts and have the highest degrees in their disciplines.
-          </i></h4>
-        <img class="img-thumbnail float-right" style="max-width:500px;" src="style-assets/media/possible/MockTrial.jpg">
-        <p>
-          Learn to fight crime from the former director of the NCIS. Analyze graphic novels with the convention director of Denver’s Comic Con. Get bitten by the insect bug with a renowned mosquito biologist.</p>
-        <p>
-          That’s possible at Metropolitan State University of Denver.</p>
-        <p> Our professors are experts in their fields, but even better at passing on their expertise to students. </p>
-        <p>
-          How? Hands-on learning built into every academic program. Whether it’s tracking storms outside the city, painting murals for local nonprofits or 3-D printing parts for Colorado space companies. </p>
-        <p>
-          And learning from industry icons isn’t limited to the classroom. In the last year, we’ve had former presidents, media personalities and literary luminaries on campus to share their knowledge.
-        </p>
-
-
-      </div>
-      <button class="col-xs-12 col-md-4 btn" data-dismiss="modal">Close</button>
-    </div>
-  </div>
-</div>
-
-  <section class="section-feels-like">
-    <div class="container">
-      <h2 style="margin-bottom:30px;">At MSU Denver, that’s what it feels like to reimagine what’s <span class="possible-word">possible</span> in higher
-        education.</h2>
-      <div class="row">
-        <div class="col-xs-12 col-md-6">
-          <p>We offer a dynamic urban setting and an incredible network of organizations
-            who partner with us, offer internships and recruit
-            our graduates. We have degrees in sought-after
-            fields, and we’re leading the way across all areas
-            of study in excellence, innovation and opportunity.
-            You can even create your own degree based on
-            your unique passions.
-            In the months ahead, visit this page to read our
-            stories, be inspired and imagine what could be
-            possible for your future.</p>
-        </div>
-        <div class="col-xs-12 col-md-6">
-          <img class="img-thumbnail" src="style-assets/media/possible/pride.jpg">
-        </div>
-      </div>
-    </div>
-  </section>
-
-
+</section>
   <section class="possible-call-to-action">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 well">
-          <h2>Start your <span class="possible-word">possible</span></h2>
-          <p>
-            MSU Denver is where classes lead to careers
-            and learners connect with leaders. Our
-            campus is diverse and welcoming, filled with
-            learners in undergraduate and master's
-            programs who have taken a variety of paths to
-            arrive here and who are discovering their own
-            possible every day.</p>
-          <p style="margin-bottom:20px"> <strong>Ready to find your possible?</strong></p>
-          <a href="https://connect.msudenver.edu/register/requestinformation" target="_blank"><button class="col-xs-12 col-md-5 offset-md-1 btn">Request information</button></a>
-          <a href="/apply" target="_blank"><button class="col-xs-12 col-md-5 btn">Apply to MSU Denver</button></a>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 well">
+        <h2>Start your <span class="possible-word">possible</span></h2>
+        <p>
+          MSU Denver is where classes lead to careers
+          and learners connect with leaders. Our
+          campus is diverse and welcoming, filled with
+          learners in undergraduate and master's
+          programs who have taken a variety of paths to
+          arrive here and who are discovering their own
+          possible every day.</p>
+        <p style="margin-bottom:20px"> <strong>Ready to find your possible?</strong></p>
+        <a href="https://connect.msudenver.edu/register/requestinformation" target="_blank"><button class="col-xs-12 col-md-5 offset-md-1 btn">Request information</button></a>
+        <a href="/apply" target="_blank"><button class="col-xs-12 col-md-5 btn">Apply to MSU Denver</button></a>
       </div>
     </div>
-    </div>
-  </section>
+  </div>
+</section>
 
 
   <div class="footer">
