--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -7,6 +7,7 @@
 
 <body>
 	<h2>Main Layouts</h2>
+	<h3><a href="/possible.html">Reimagine Possible</a></h3>
 	<h3><a href="/homepage.html"> Homepage layout Localhost</a></h3>
 	<h3><a href="/web-builder/www-root/homepage.html"> Homepage layout Git </a></h3>
 	<h3><a href="/2column.html"> 2column layout Localhost</a></h3>
